[package]
name = "lodust"
version = "0.1.0"
authors = ["Chris Liu <chrisliupascal@gmail.com>"]
edition = "2018"
description = "Rust version of Lodash"
documentation = "https://docs.rs/lodust"
readme = "README.md"
repository = "https://github.com/nighostchris/lodust/"
license = "MIT"
include = [
  "Cargo.toml",
  "src/**/*"
]

[dependencies]
